// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DCFormField Renders all the input components without error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCText",
        "description": "A description for this input",
        "displayName": "DCText",
        "error": "",
        "name": "myTextInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCText",
      "description": "A description for this input",
      "displayName": "DCText",
      "error": "",
      "name": "myTextInput",
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCText",
        "description": "A description for this input",
        "displayName": "DCText",
        "error": "",
        "name": "myTextInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCBoolean",
        "description": "A description for this input",
        "displayName": "DCBoolean",
        "name": "myBooleanInput",
        "parent": "myForm",
        "value": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCBoolean",
      "description": "A description for this input",
      "displayName": "DCBoolean",
      "name": "myBooleanInput",
      "parent": "myForm",
      "value": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCBoolean",
        "description": "A description for this input",
        "displayName": "DCBoolean",
        "name": "myBooleanInput",
        "parent": "myForm",
        "value": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCNumber",
        "description": "A description for this input",
        "displayName": "DCNumber",
        "error": "",
        "name": "myNumberInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCNumber",
      "description": "A description for this input",
      "displayName": "DCNumber",
      "error": "",
      "name": "myNumberInput",
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCNumber",
        "description": "A description for this input",
        "displayName": "DCNumber",
        "error": "",
        "name": "myNumberInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCRadio",
        "description": "A description for this input",
        "displayName": "DCRadio",
        "error": "",
        "name": "myRadioInput",
        "options": Array [
          Object {
            "key": "thisOption",
            "text": "This option",
            "value": "thisOption",
          },
          Object {
            "key": "thatOption",
            "text": "That option",
            "value": "thatOption",
          },
          Object {
            "key": "somethingElse",
            "text": "Something else",
            "value": "somethingElse",
          },
        ],
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCRadio",
      "description": "A description for this input",
      "displayName": "DCRadio",
      "error": "",
      "name": "myRadioInput",
      "options": Array [
        Object {
          "key": "thisOption",
          "text": "This option",
          "value": "thisOption",
        },
        Object {
          "key": "thatOption",
          "text": "That option",
          "value": "thatOption",
        },
        Object {
          "key": "somethingElse",
          "text": "Something else",
          "value": "somethingElse",
        },
      ],
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCRadio",
        "description": "A description for this input",
        "displayName": "DCRadio",
        "error": "",
        "name": "myRadioInput",
        "options": Array [
          Object {
            "key": "thisOption",
            "text": "This option",
            "value": "thisOption",
          },
          Object {
            "key": "thatOption",
            "text": "That option",
            "value": "thatOption",
          },
          Object {
            "key": "somethingElse",
            "text": "Something else",
            "value": "somethingElse",
          },
        ],
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCDate",
        "description": "A description for this input",
        "displayName": "DCDate",
        "error": "",
        "name": "myDateInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCDate",
      "description": "A description for this input",
      "displayName": "DCDate",
      "error": "",
      "name": "myDateInput",
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCDate",
        "description": "A description for this input",
        "displayName": "DCDate",
        "error": "",
        "name": "myDateInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 6`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCDropdown",
        "description": "A description for this input",
        "displayName": "DCDropdown",
        "endpoints": Array [
          "https://metadata.ssbmod.net/data/Role/",
          "https://metadata.ssbmod.net/data/Agent/",
        ],
        "error": "",
        "multiSelect": false,
        "name": "myDropdownSingleSelectInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCDropdown",
      "description": "A description for this input",
      "displayName": "DCDropdown",
      "endpoints": Array [
        "https://metadata.ssbmod.net/data/Role/",
        "https://metadata.ssbmod.net/data/Agent/",
      ],
      "error": "",
      "multiSelect": false,
      "name": "myDropdownSingleSelectInput",
      "parent": "myForm",
      "required": true,
      "value": "",
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCDropdown",
        "description": "A description for this input",
        "displayName": "DCDropdown",
        "endpoints": Array [
          "https://metadata.ssbmod.net/data/Role/",
          "https://metadata.ssbmod.net/data/Agent/",
        ],
        "error": "",
        "multiSelect": false,
        "name": "myDropdownSingleSelectInput",
        "parent": "myForm",
        "required": true,
        "value": "",
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DCFormField Renders all the input components without error 7`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DCFormField
    properties={
      Object {
        "component": "DCDropdown",
        "description": "A description for this input",
        "displayName": "DCDropdown (multiSelect)",
        "endpoints": Array [
          "https://metadata.ssbmod.net/data/Agent/",
          "https://metadata.ssbmod.net/data/Role/",
        ],
        "error": "",
        "multiSelect": true,
        "name": "myDropdownMultipleSelectInput",
        "parent": "myForm",
        "required": true,
        "value": Array [],
        "warning": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "component": "DCDropdown",
      "description": "A description for this input",
      "displayName": "DCDropdown (multiSelect)",
      "endpoints": Array [
        "https://metadata.ssbmod.net/data/Agent/",
        "https://metadata.ssbmod.net/data/Role/",
      ],
      "error": "",
      "multiSelect": true,
      "name": "myDropdownMultipleSelectInput",
      "parent": "myForm",
      "required": true,
      "value": Array [],
      "warning": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "component": "DCDropdown",
        "description": "A description for this input",
        "displayName": "DCDropdown (multiSelect)",
        "endpoints": Array [
          "https://metadata.ssbmod.net/data/Agent/",
          "https://metadata.ssbmod.net/data/Role/",
        ],
        "error": "",
        "multiSelect": true,
        "name": "myDropdownMultipleSelectInput",
        "parent": "myForm",
        "required": true,
        "value": Array [],
        "warning": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
